# numina

./: .gitignore  .hgignore  .readthedocs.yaml  .travis.yml  AUTHORS.rst  CITATION.cff  MANIFEST.in  NEWS  NEWS.rst  NEWS.txt  README  README.rst  README.txt  appveyor.yml  azure-pipelines.yml  emir_wrap.cc  imcombine.py  logging.conf  mydirs.py  pip-requirements-dev.txt  pylintrc  pyproject.toml  setup.cfg  setup.py  tox.ini
.circleci/: config.yml
.github/workflows/: manual.yml  test.yml  upload.yml  upload_pypi.yml
doc/: Makefile  array.rst  conf.py  config.rst  contents.rst  creation.rst  devs-requirements.txt  exceptions.rst  glossary.rst  highlevel.rst  image.rst  index.rst  instrument.rst  intro.rst  methods.rst  module.rst  modules.rst  qa.rst  recipes.rst  treedict.rst  user.rst  util.rst
doc/.templates/: layout.html
doc/creation/: concepts.rst  datatypes.rst  environ.rst  environ.txt  example.rst  index.rst  pipelines.rst  product.rst
doc/emir/: modules.rst  recipes.rst
doc/notebooks/: Wavelength_Calibration.ipynb
doc/reference/: array.rst  astrotime.rst  core.rst  creation.rst  dal.rst  datamodel.rst  drps.rst  exceptions.rst  extraiter.rst  flow.rst  frame.rst  generic.rst  index.rst  instrument.rst  logger.rst  modeling.rst  modules.rst  pipeline.rst  processing.rst  qa.rst  serialize.rst  store.rst  treedict.rst  types.rst  user.rst  util.rst  visualization.rst  worker.rst  xdgdirs.rst
doc/user/: cli.rst  deploy.rst  deploy_conda.rst  deploy_venv.rst  index.rst  install.rst  intro.rst  solaris.rst
lib/: combinemodule.c
lib/emir/: __init__.py  dataproducts.py  decorators.py  exceptions.py  logger.py
lib/numina/: __init__.py  compatibility.py  config.py  decorators.py  defaults.cfg  diskstorage.py  exceptions.py  generic.py  instrument.py  iterqueue.py  jsonserializer.py  legacy.py  logger.py  logging.ini  qa.py  recipes.py  user.py  worker.py
numina/: __init__.py  astrotime.py  compatibility.py  config.py  conftest.py  constants.py  datamodel.py  decorators.py  defaults.cfg  diskstorage.py  enum.py  exceptions.py  extraiter.py  generic.py  images  iterqueue.py  jsonserializer.py  legacy.py  logger.py  logging.ini  pipeline.py  processing.py  qa.py  simulation.py  treedict.py  user.py  version.py  visualization.py  worker.py  xdgdirs.py
numina/array/: __init__.py  background.py  bbox.py  blocks.py  bpm.cpp  bpm.py  bpm.pyx  ccd_line.py  clippix.c  clippix.pyx  combine.py  cosmetics.py  distortion.py  fwhm.py  imsurfit.py  interpolation.py  mode.py  nirproc.py  numsplines.py  offrot.py  recenter.py  robustfit.py  rutilities.py  stats.py  utils.py
numina/core/: __init__.py  checkers.py  dal.py  datadescriptors.py  dataframe.py  dataholders.py  dataload.py  deptree.py  insconf.py  load.py  metaclass.py  metarecipes.py  objimport.py  oresult.py  pipeline.py  pipelineload.py  product.py  products.py  qc.py  query.py  recipeinout.py  recipeinput.py  recipereqs.py  reciperesult.py  recipes.py  requirements.py  tagexpr.py  taggers.py  typedialect.py  types.py  utils.py  validation.py  validator.py
numina/dal/: __init__.py  absdal.py  backend.py  clidal.py  daliface.py  dictdal.py  diskfiledal.py  mockdal.py  stored.py  unserial.py  utils.py
numina/drp/: __init__.py
numina/drps/: __init__.py  drpbase.py  drpsystem.py
numina/flow/: __init__.py  datamodel.py  flow.py  node.py  processing.py
numina/frame/: __init__.py  combine.py  schema.py  utils.py
numina/image/: __init__.py  background.py  flow.py  node.py  processing.py  storage.py
numina/instrument/: __init__.py  assembly.py  base.py  configorigin.py  detector.py  device.py  filter.py  generic.py  hwdevice.py  lamp.py  mapping.py  profiles.py  shutter.py  simulator.py  sources.py  template.py
numina/modeling/: __init__.py  enclosed.py  gaussbox.py  sumofgauss.py
numina/processing/: __init__.py  combine.py
numina/recipes/: __init__.py  lookup.py  oblock.py  products.py  registry.py  requirements.py  sample.py
numina/serialize/: __init__.py  jsonserializer.py  yamlserializer.py
numina/simulation/: actions.py  atmosphere.py  detector.py  device.py  efficiency.py  optics.py  shutter.py  starcounts.py  wheel.py
numina/store/: __init__.py  backends.py  basedump.py  config.py  default.py  defaultl.py  dump.py  load.py  store.py
numina/tasks/: __init__.py  simulation.py  tasks.py
numina/tests/: __init__.py  diskcache.py  download.py  drpmocker.py  helper.py  nobenchmark.py  plugins.py  pytest_plugins.py  pytest_resultcmp.py  recipes.py  simpleobj.py  test_all.py  test_array.py  test_astrotime.py  test_combine.py  test_cosmetics.py  test_cramp.py  test_datamodel.py  test_diskstorage.py  test_ellipticalaperture.py  test_enum.py  test_extraiter.py  test_fowler.py  test_fowler_c.py  test_fowler_cy.py  test_generic.py  test_imsurfit.py  test_logger.py  test_processing.py  test_profiles.py  test_ramp.py  test_ramp_c.py  test_ramp_cy.py  test_recipe.py  test_resultcmp.py  test_testcache.py  test_treedict.py  test_user.py  test_visualization.py  testcache.py
numina/tools/: arg_file_is_new.py  check_setstate_getstate.py  imath.py  r6_addnf.py  r6_imcombine.py  r6_replace_image.py  test_setstate_getstate.py
pipelines/: README
schemas/: component-schema.json  drp-schema.json  image1.json  image2.json  oblock-schema.json
scripts/: defaults.cfg  logging.ini  numina  numina.py  pyemir_runner.py  recipe.cfg
src/: base_crtp.h  base_iterator.h  combine_methods.h  combinemodule.c  combinemodule.cc  fowlerproc.pyx  functional.h  method_base.h  method_exception.h  method_factory.cc  method_factory.h  methods.c  methods.cc  methods.h  methods_python.cc  methods_python.h  nirproc.cpp  nirproc.pyx  nirprocmodule.cc  nu_combine.cc  nu_combine.h  nu_combine_defs.h  nu_combine_methods.cc  nu_combine_methods.h  nu_fowler.h  nu_ramp.h  numpytypes.h  operations.cc  operations.h  procdefs.pyx  rampmodule.cc  rampproc.pyx  reject_factory.cc  reject_factory.h  reject_methods.cc  reject_methods.h  test.cc  transformation_factory.cc  transformation_factory.h  ufunc.cc  (+3 more)
tools/: arg_file_is_new.py  imath.py
(+784 files in other folders)
