
[metadata]
name = numina
version = attr:numina.version.version
author = Sergio Pascual
author_email = sergiopr@fis.ucm.es
url = https://github.com/guaix-ucm/numina
license = GPLv3
license_file = LICENSE.txt
description = Astronomy data reduction library
classifiers =
    Programming Language :: C
    Programming Language :: C++
    Programming Language :: Cython
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Development Status :: 3 - Alpha
    Environment :: Console
    Intended Audience :: Science/Research
    License :: OSI Approved :: GNU General Public License (GPL)
    Operating System :: OS Independent
    Topic :: Scientific/Engineering :: Astronomy
    Topic :: Software Development :: Libraries :: Application Frameworks
long_description = file:README.rst
long_description_content_type = text/rst

[options]
packages = find:
install_requires =
   setuptools>=39.2
   six>=1.7
   numpy
   astropy; python_version>="3"
   astropy<3; python_version<"3"
   scipy
   PyYaml
   matplotlib
   enum34; python_version<"3.4"
   contextlib2; python_version<"3.5"
   python-dateutil
   lmfit
   scikit-image

[options.package_data]
numina.drps.tests =
    drptest1.yaml
    drptest2.yaml
    drptest3.yaml
    drptest4.yaml
    drpclodia.yaml
numina.drps.tests.configs =
    instrument-*.json
    component-*.json
    properties-*.json
    setup-*.json

[options.entry_points]
console_scripts =
    numina = numina.user.cli:main
    numina-apply_integer_offsets = numina.array.wavecalib.apply_integer_offsets:main
    numina-bpm = numina.array.bpm:main
    numina-check_wlcalib = numina.array.wavecalib.check_wlcalib:main
    numina-imath = numina.tools.imath:main
    numina-r6-addnf = numina.tools.r6_addnf:main
    numina-r6-imcombine = numina.tools.r6_imcombine:main
    numina-r6-insert_keyword = numina.tools.r6_insert_keyword:main
    numina-r6-replace_image = numina.tools.r6_replace_image:main
    numina-wavecalib = numina.array.wavecalib.__main__:main
    numina-ximshow = numina.array.display.ximshow:main
    numina-ximplotxy = numina.array.display.ximplotxy:main
